<resources>
    <string name="app_name" translatable="false">LuBank</string>
    <string name="singup_msg">No account yet? Create one</string>
    <string name="singin" translatable="false">Sing In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="home" translatable="false">Home</string>
    <string name="ok" translatable="false">Ok</string>

    <string name="register">Register</string>
    <string name="login_field_error">Username or Password isn\'t correct</string>
    <string name="register_field_empty">Username or Password is Empty</string>
    <string name="register_field_password">Password and password confirmation not the same</string>
    <string name="register_msg">Enter your data for Register !</string>
    <string name="register_dialog_title">Register</string>
    <string name="register_dialog_msg">Your account was create with success</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="name_invalid">Invalid Name</string>

    <string name="view">View</string>
    <string name="value">Value</string>
    <string name="dollar">US$</string>
    <string name="depositORSend">Receive or Send</string>
    <string name="name">Name</string>
    <string name="name_isempty">Name is Empty</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="sending">Sending</string>
    <string name="amount">Amount</string>
    <string name="msg_sending">Sending To</string>
    <string name="receive">Receive</string>
    <string name="receiving">Receiving</string>
    <string name="search">Search</string>
    <string name="msg_value_erro">Invalid Value</string>
    <string name="without_records">Without Records</string>
    <string name="balance">Balance</string>
    <string name="msg_sending_confimartion">"Sending money to "</string>
    <string name="msg_confirmation">You have sent</string>
    <string name="money">Money</string>
    <string name="currency">US$</string>
    <string name="to">To</string>
    <string name="congrats">Congratulation</string>
    <string name="expenses">Expenses</string>
    <string name="yourself">yourself</string>
    <string name="revenue">Revenue</string>

</resources>
