<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".fragments.ViewBalanceFrament">


    <TextView
        android:id="@+id/textView11"
        android:layout_width="52dp"
        android:layout_height="23dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="36dp"
        android:textColor="#000"
        android:text="@string/balance"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:text="Balance" />

    <TextView
        android:id="@+id/txtBalance"
        android:layout_width="56dp"
        android:layout_height="17dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="39dp"
        android:text="@string/balance"
        android:textColor="#000"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/txtExpenses"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="370dp"
        android:layout_height="156dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"

        android:src="@drawable/ic_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:textColor="#000"
        android:text="@string/revenue"
        app:layout_constraintStart_toStartOf="@+id/txtRevenue"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/txtRevenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="86dp"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtExpenses"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:text="@string/revenue" />

    <TextView
        android:id="@+id/txtExpenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="34dp"
        android:textColor="#000"
        app:layout_constraintEnd_toStartOf="@+id/txtRevenue"
        app:layout_constraintStart_toEndOf="@+id/txtBalance"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:text="Expenses" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:textColor="#000"
        android:text="@string/expenses"
        app:layout_constraintEnd_toEndOf="@+id/txtExpenses"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>